--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 
 <body>
 
-    <header class="hero-section">
+    <header id="beranda" class="hero-section">
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="nav-logo">LPK GLOBAL MANDIRI</a>
+                <a href="#beranda" class="nav-logo">LPK GLOBAL MANDIRI</a>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
                 <ul class="nav-menu">
                     <li><a href="#beranda">BERANDA</a></li>
-                    <li><a href="#mengapa-kami">PROFIL</a></li>
                     <li><a href="#paket-kursus">KURSUS</a></li>
+                    <li><a href="#mengapa-kami">PROFIL</a></li>
                     <li><a href="#kontak">KONTAK</a></li>
                 </ul>
             </nav>
@@ -42,7 +47,7 @@
                     </div>
                 </div>
                 <div class="hero-image">
-                    <img src="assets/cars-hero.png" alt="Mobil Kursus Mengemudi">
+                    <img src="assets/Mobil_01.png" alt="Mobil Kursus Mengemudi">
                 </div>
             </div>
         </div>
@@ -60,73 +65,73 @@
 
         <section id="paket-kursus" class="packages-section hidden-section">
             <div class="container">
-                <h2>Pilih Paket Kursus Anda</h2>
-                <p class="section-subtitle">Kami menyediakan berbagai pilihan paket kursus yang dapat disesuaikan untuk
-                    memenuhi kebutuhan Anda. Mulai mengemudi dengan jenis transmisi yang paling sesuai!</p>
+                <h2>Program Pelatihan Kami</h2>
+                <p class="section-subtitle">Kami menyediakan berbagai program pelatihan berkualitas untuk meningkatkan
+                    keterampilan dan kompetensi Anda dalam berbagai bidang</p>
                 <div class="package-cards">
                     <div class="package-card">
                         <div class="card-header">
                             <i class="fas fa-car"></i>
-                            <h3>Manual Basic</h3>
-                            <span>Pemula</span>
+                            <h3>Stir Mobil</h3>
+                            <span>Sistem Private</span>
                         </div>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i> 10x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Teori Dasar Mengemudi</li>
-                            <li><i class="fas fa-check-circle"></i> Praktik Dasar & Parkir</li>
+                            <li><i class="fas fa-check-circle"></i> Teori & Praktik Mengemudi</li>
                             <li><i class="fas fa-check-circle"></i> Safety Driving</li>
-                            <li><i class="fas fa-check-circle"></i> Video Tutorial</li>
-                        </ul>
-                        <p class="price">Rp. 1.000.000</p>
-                        <a href="#" class="btn btn-secondary">Pilih Paket</a>
-                    </div>
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-car-side"></i>
-                            <h3>Matic Basic</h3>
-                            <span>Pemula</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 10x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Teori Dasar Mengemudi</li>
-                            <li><i class="fas fa-check-circle"></i> Praktik Dasar & Parkir</li>
-                            <li><i class="fas fa-check-circle"></i> Safety Driving</li>
-                            <li><i class="fas fa-check-circle"></i> Video Tutorial</li>
-                        </ul>
-                        <p class="price">Rp. 1.200.000</p>
-                        <a href="#" class="btn btn-secondary">Pilih Paket</a>
-                    </div>
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-star"></i>
-                            <h3>Manual Pro + SIM</h3>
-                            <span>Advance</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 15x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Semua Fitur Basic</li>
-                            <li><i class="fas fa-check-circle"></i> Teknik Mengemudi Advance</li>
-                            <li><i class="fas fa-check-circle"></i> Simulasi Ujian SIM</li>
+                            <li><i class="fas fa-check-circle"></i> Teknik Parkir</li>
+                            <li><i class="fas fa-check-circle"></i> Instruktur Profesional</li>
                             <li><i class="fas fa-check-circle"></i> Pengurusan SIM A</li>
                         </ul>
-                        <p class="price">Rp. 1.800.000</p>
-                        <a href="#" class="btn btn-secondary">Pilih Paket</a>
+                        <p class="price">Mulai Rp. 400.000</p>
+                        <a href="#" class="btn btn-secondary">Detail Kursus</a>
                     </div>
                     <div class="package-card">
                         <div class="card-header">
-                            <i class="fas fa-crown"></i>
-                            <h3>Matic Pro + SIM</h3>
-                            <span>Advance</span>
+                            <i class="fas fa-desktop"></i>
+                            <h3>Komputer</h3>
+                            <span>Basic & Advanced</span>
                         </div>
                         <ul>
-                            <li><i class="fas fa-check-circle"></i> 15x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Semua Fitur Basic</li>
-                            <li><i class="fas fa-check-circle"></i> Teknik Mengemudi Advance</li>
-                            <li><i class="fas fa-check-circle"></i> Simulasi Ujian SIM</li>
-                            <li><i class="fas fa-check-circle"></i> Pengurusan SIM A</li>
+                            <li><i class="fas fa-check-circle"></i> Microsoft Office</li>
+                            <li><i class="fas fa-check-circle"></i> Desain Grafis</li>
+                            <li><i class="fas fa-check-circle"></i> Internet & Email</li>
+                            <li><i class="fas fa-check-circle"></i> Praktik Langsung</li>
+                            <li><i class="fas fa-check-circle"></i> Sertifikat Kompetensi</li>
                         </ul>
-                        <p class="price">Rp. 2.000.000</p>
-                        <a href="#" class="btn btn-secondary">Pilih Paket</a>
+                        <p class="price">Mulai Rp. 800.000</p>
+                        <a href="#" class="btn btn-secondary">Detail Kursus</a>
+                    </div>
+                    <div class="package-card">
+                        <div class="card-header">
+                            <i class="fas fa-scissors"></i>
+                            <h3>Menjahit</h3>
+                            <span>Dasar - Mahir</span>
+                        </div>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i> Dasar Menjahit</li>
+                            <li><i class="fas fa-check-circle"></i> Pola & Desain</li>
+                            <li><i class="fas fa-check-circle"></i> Teknik Jahit Modern</li>
+                            <li><i class="fas fa-check-circle"></i> Praktik Intensif</li>
+                            <li><i class="fas fa-check-circle"></i> Sertifikat Keahlian</li>
+                        </ul>
+                        <p class="price">Mulai Rp. 1.200.000</p>
+                        <a href="#" class="btn btn-secondary">Detail Kursus</a>
+                    </div>
+                    <div class="package-card">
+                        <div class="card-header">
+                            <i class="fas fa-tools"></i>
+                            <h3>Otomotif</h3>
+                            <span>Mekanik Profesional</span>
+                        </div>
+                        <ul>
+                            <li><i class="fas fa-check-circle"></i> Dasar Mesin</li>
+                            <li><i class="fas fa-check-circle"></i> Sistem Kelistrikan</li>
+                            <li><i class="fas fa-check-circle"></i> Diagnosa Kerusakan</li>
+                            <li><i class="fas fa-check-circle"></i> Praktik Bengkel</li>
+                            <li><i class="fas fa-check-circle"></i> Sertifikat Profesi</li>
+                        </ul>
+                        <p class="price">Mulai Rp. 1.500.000</p>
+                        <a href="#" class="btn btn-secondary">Detail Kursus</a>
                     </div>
                 </div>
             </div>
@@ -136,83 +141,40 @@
             <div class="container">
                 <h2>Mengapa Harus Pilih Kami ?</h2>
                 <div class="why-us-grid">
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-car"></i>
-                            <h3>Paket Dasar</h3>
-                            <span>Manual</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 5x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Belajar Dasar & Parkir</li>
-                        </ul>
-                        <p class="price">Rp. 550.000</p>
-                        <a href="#" class="btn btn-secondary">Belajar</a>
+                    <div class="why-us-card">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                        <h3>Instruktur Berpengalaman & Sabar</h3>
+                        <p>Kami mengerti kegugupan pengemudi pemula. Instruktur kami dilatih untuk membimbing dengan
+                            sabar hingga Anda mahir.</p>
                     </div>
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-road"></i>
-                            <h3>Paket Standar</h3>
-                            <span>Manual</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 8x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Latihan Tanjakan & Parkir</li>
-                        </ul>
-                        <p class="price">Rp. 800.000</p>
-                        <a href="#" class="btn btn-secondary">Belajar</a>
+                    <div class="why-us-card">
+                        <i class="fas fa-clock"></i>
+                        <h3>Jadwal Fleksibel</h3>
+                        <p>Punya kesibukan lain? Kami menyediakan jadwal latihan yang bisa disesuaikan dengan waktu
+                            luang Anda, termasuk akhir pekan.</p>
                     </div>
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-star"></i>
-                            <h3>Paket Lancar</h3>
-                            <span>Manual</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 12x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Mahir di Jalan Raya</li>
-                        </ul>
-                        <p class="price">Rp. 1.100.000</p>
-                        <a href="#" class="btn btn-secondary">Belajar</a>
+                    <div class="why-us-card">
+                        <i class="fas fa-tachometer-alt"></i>
+                        <h3>Cepat Mahir</h3>
+                        <p>Dengan metode pengajaran yang efektif dan fokus pada praktik langsung, kami membantu Anda
+                            menguasai mobil lebih cepat.</p>
                     </div>
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-car"></i>
-                            <h3>Paket Dasar</h3>
-                            <span>Matic</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 5x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Pengenalan & Jalan Lurus</li>
-                        </ul>
-                        <p class="price">Rp. 650.000</p>
-                        <a href="#" class="btn btn-secondary">Belajar</a>
+                    <div class="why-us-card">
+                        <i class="fas fa-shield-alt"></i>
+                        <h3>Fokus Pada Keamanan (Safety Driving)</h3>
+                        <p>Prioritas utama kami adalah keselamatan. Anda akan diajarkan teknik mengemudi yang aman,
+                            bukan hanya sekadar bisa jalan.</p>
                     </div>
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-road"></i>
-                            <h3>Paket Standar</h3>
-                            <span>Matic</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 8x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Latihan Parkir & Putar Balik</li>
-                        </ul>
-                        <p class="price">Rp. 950.000</p>
-                        <a href="#" class="btn btn-secondary">Belajar</a>
+                    <div class="why-us-card">
+                        <i class="fas fa-book"></i>
+                        <h3>Materi Terpadu (Teori & Praktik)</h3>
+                        <p>Tidak hanya belajar di jalan, Anda juga akan dibekali pemahaman rambu lalu lintas dan etika
+                            berkendara yang benar.</p>
                     </div>
-                    <div class="package-card">
-                        <div class="card-header">
-                            <i class="fas fa-star"></i>
-                            <h3>Paket Lancar + SIM A</h3>
-                            <span>Matic</span>
-                        </div>
-                        <ul>
-                            <li><i class="fas fa-check-circle"></i> 12x Pertemuan</li>
-                            <li><i class="fas fa-check-circle"></i> Latihan Komprehensif</li>
-                        </ul>
-                        <p class="price">Rp. 1.500.000</p>
-                        <a href="#" class="btn btn-secondary">Belajar</a>
+                    <div class="why-us-card">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h3>Lokasi Strategis</h3>
+                        <p>Mudah dijangkau oleh calon siswa dari Wates, Kulon Progo, dan sekitarnya.</p>
                     </div>
                 </div>
             </div>
@@ -226,15 +188,16 @@
                     mengemudi. Dapatkan arahan dengan mudah menggunakan Google Maps ke tempat kami.</p>
                 <div class="map-placeholder">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.934835698048!2d110.1570798153443!3d-7.796791994380628!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7afc3a5064f279%3A0x738cd3b320b669f!2sAlun-Alun%20Wates!5e0!3m2!1sen!2sid!4v1663872518469!5m2!1sen!2sid"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.6799256227337!2d110.14983987465383!3d-7.826912177953415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7afbe467dc3c3f%3A0xbb80a7f43b8d1bc8!2sLPK%20Global%20Mandiri%20-%20Kursus%20Mengemudi!5e0!3m2!1sen!2sid!4v1696601519809!5m2!1sen!2sid"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
                 <div class="address">
-                    <p><strong>Alamat:</strong> Jl. Ringroad Utara, Beji, Wates, Kab. Kulon Progo, DI Yogyakarta 55651
+                    <p><strong>Alamat:</strong> Dipan, Wonosidi Kidul, Kec. Wates, Kabupaten Kulon Progo, Daerah
+                        Istimewa Yogyakarta 55651
                     </p>
-                    <p><strong>Butuh informasi lebih lanjut? Hubungi di:</strong> +62 878-3855-1178</p>
+                    <p><strong>Butuh informasi lebih lanjut? Hubungi di:</strong> +62 878-3870-7128</p>
                 </div>
             </div>
         </section>
